--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,5 @@
     <groupId>com.mimi.test</groupId>
     <artifactId>xiaomi</artifactId>
 
-     <properties/>
+     <properties></properties>
 </project>
